[package]
name = "ctcsbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ctcsbt-cli",
    "ctcsbt-macro",
]

[dependencies]
ctcsbt-macro = { path = "./ctcsbt-macro"}
quote = "*"
rand = "*"
