[package]
name = "ctcsbt-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "*"
quote = "*"
darling = "*"
proc-macro2 = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"